feat: enhance caching mechanisms for audit responses, PDF reports, AI recommendations, platform stats, and link statuses